--- a/style.css
+++ b/style.css
@@ -21,40 +21,45 @@
 aside {
   display: grid;
   grid-row: 1 / 3;
+  grid-template-rows: min-content min-content min-content;
   justify-items: start;
   background-color: var(--clr-blue);
   color: white;
   padding-left: 1rem;
 }
 
-.dashboard {
+.logo-and-title {
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 0;
-  border: 1px solid black;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
 }
 
-.menu-one,
-.menu-two {
+.menus {
   display: grid;
-  grid-auto-rows: min-content;
-  padding: 0;
-  margin: 0;
-  gap: 10px;
-  border: 1px solid black;
+  row-gap: 3rem; /* Gap between menus*/
 }
 
-.menu-one li,
-.menu-two li {
+.menu-one a,
+.menu-two a {
   display: flex;
   align-items: center;
   gap: 10px;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: white;
+  transition: background-color 0.3s ease; /* Hover effect*/
+}
+
+.menu-one a:hover,
+.menu-two a:hover {
+  background-color: rgba(255, 255, 255, 0.1); 
 }
 
 .logo {
-  height: 60px;
-  width: 60px;
+  height: 2.5em;
+  width: 2.5em;
 }
 
 .icon {
@@ -70,10 +75,6 @@ aside {
 .logo-brand {
   height: 60px;
   width: 60px;
-}
-
-ul li {
-  list-style-type: none;
 }
 
 /* Header styles*/
