--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
   --gh-avatar: url(https://github.com/AndresDev28.png);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body{
   width: 100vw;
   height: 100vh;
@@ -26,7 +31,6 @@ body{
 .side-bar {
   grid-area: side-bar;
   background-color: var(--clr-blue);
-  font-weight: 500;
 }
 
 .menu-icon > h1 {
@@ -46,8 +50,9 @@ body{
 
 .side-bar > div:not(:first-child) {
   padding: 1vw 0.1vw 0.1vw 0vw;
-  font-size: calc(20px + 0.2vw);
+  font-size: .7em;
   margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .side-bar > div:nth-child(2) {
@@ -60,7 +65,7 @@ body{
 }
 
 .dashboard {
-  font-size: clamp(12px, calc(25px + 0.9vw), 50px);
+  font-size: 1em;
 }
 
 .dashboard {
@@ -266,6 +271,10 @@ input {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
+.card li {
+  list-style: none;
+}
+
 h5 {
   font-size: .8rem;
 }
@@ -273,6 +282,18 @@ h5 {
 .announcement > p {
   font-size: .8rem;
 }
+
+/* Seleccionar y aplicar estilos a los 'p' dentro del primer y segundo 'li' */
+ul.card li.announcement:nth-child(1) p,
+ul.card li.announcement:nth-child(2) p {
+  margin-bottom: 15px;
+}
+
+ul.card li.announcement:nth-child(2) h5,
+ul.card li.announcement:nth-child(3) h5 {
+  margin-top: 15px;
+}
+
 
 /* Trending styling */
 
